--- a/config.json
+++ b/config.json
@@ -2,7 +2,7 @@
   "app_title": "ASL Learning Suite",
   "model_path": "models/asl_model_MobileNetV2_finetuned_compat.h5",
   "reference_dir": "EXAMPLE_IMG",
-  "food_image": "Donut.png",
+  "food_image": "images/Donut.png",
   "camera_index": 0,
   "frame_width": 1280,
   "frame_height": 720,
